--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
@@ -12,6 +13,9 @@
     "crypto-js": "^4.2.0",
     "jquery": "^3.7.1",
     "next": "14.2.3",
+    "next-pwa": "^5.6.0",
+    "next-seo": "^6.5.0",
+    "next-sitemap": "^4.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1"
