--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "postbuild": "next-sitemap",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "crypto-js": "^4.2.0",
-    "jquery": "^3.7.1",
-    "next": "14.2.3",
-    "next-pwa": "^5.6.0",
-    "next-seo": "^6.5.0",
-    "next-sitemap": "^4.2.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^5.2.1"
-  },
-  "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
-  }
+    "name": "frontend",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "postbuild": "next-sitemap",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "crypto-js": "^4.2.0",
+        "jquery": "^3.7.1",
+        "next": "14.2.3",
+        "next-pwa": "^5.6.0",
+        "next-seo": "^6.5.0",
+        "next-sitemap": "^4.2.3",
+        "prettier": "^3.2.5",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-icons": "^5.2.1"
+    },
+    "devDependencies": {
+        "eslint": "^8",
+        "eslint-config-next": "14.2.3",
+        "postcss": "^8",
+        "tailwindcss": "^3.4.1"
+    }
 }
